fixed spacing footer and home page

--- a/sass/components/__buttons.scss
+++ b/sass/components/__buttons.scss
@@ -80,6 +80,8 @@
     &__longtext--home {
         margin-top: 0;
         margin-left: 0;
+        padding: 1em 5em;
+
     }
 
     &__longtext--contact {
