--- a/sass/components/__card.scss
+++ b/sass/components/__card.scss
@@ -2,7 +2,7 @@
     background-color: #F4F6FB;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 1em;
-    padding-bottom: 2em;
+    padding-bottom: 3em;
     margin-top: 0;
 
     &__title{
@@ -160,8 +160,8 @@
 
     &__shop--center {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        padding-top: 1em;
-        padding-bottom: 5em;
+        padding-top: 8em;
+        padding-bottom: 18em;
     }
 
     &__header__shop--center{
@@ -551,9 +551,9 @@
         }
 
         &__image--home {
-            width: 300px;
+            width: 400px;
             margin-top: 5em;
-            margin-left: 1em;
+            margin-left: 0em;
         }
 
 
@@ -696,8 +696,8 @@
         }
 
         &__image--home {
-            width: 500px;
-            margin-top: 0em;
+            width: 450px;
+            margin-top: 2em;
             margin-left: -8em;
         }
 
