--- a/sass/components/__list.scss
+++ b/sass/components/__list.scss
@@ -1,6 +1,6 @@
 .list {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    padding-bottom: 12em;
     &__item {
         display: grid;
         grid-template-columns: 50% 50%;
