--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -137,6 +137,7 @@
   background-color: #F4F6FB;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #262F4A;
+  margin-bottom: 17.35em;
 }
 .form-group__title {
   text-align: center;
@@ -346,6 +347,7 @@
 .button__longtext--home {
   margin-top: 0;
   margin-left: 0;
+  padding: 1em 5em;
 }
 .button__longtext--contact {
   height: 55px;
@@ -423,7 +425,7 @@
   background-color: #F4F6FB;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding-top: 1em;
-  padding-bottom: 2em;
+  padding-bottom: 3em;
   margin-top: 0;
 }
 .card__title {
@@ -555,8 +557,8 @@
 }
 .card__shop--center {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  padding-top: 1em;
-  padding-bottom: 5em;
+  padding-top: 8em;
+  padding-bottom: 18em;
 }
 .card__header__shop--center {
   display: block;
@@ -866,9 +868,9 @@
     margin-top: 0;
   }
   .card__image--home {
-    width: 300px;
+    width: 400px;
     margin-top: 5em;
-    margin-left: 1em;
+    margin-left: 0em;
   }
   .card__image--proces1 {
     width: 350px;
@@ -978,8 +980,8 @@
     padding-bottom: 15em;
   }
   .card__image--home {
-    width: 500px;
-    margin-top: 0em;
+    width: 450px;
+    margin-top: 2em;
     margin-left: -8em;
   }
   .card__body--switch--vuilbak {
@@ -1022,6 +1024,7 @@
 }
 .list {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding-bottom: 12em;
 }
 .list__item {
   display: grid;
@@ -1063,7 +1066,7 @@
 }
 .table {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  padding-bottom: 5em;
+  padding-bottom: 37em;
 }
 .table__title {
   text-align: center;
